Added some silly frames.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Nutczar</title>
 	<meta name="description" content="Nutczar is the czar of the nuts." />
 	<link rel="stylesheet" href="/css/styles.css" />
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lobster|Sigmar+One|Monofett' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -12,6 +13,18 @@
 
 		<p>Hold tight.</p>
 
+	</div>
+
+	<div id="column1">
+		<iframe src="http://homeguides.sfgate.com/stain-douglas-fir-wood-46122.html"></iframe>		
+	</div>
+
+	<div id="column2">
+		<iframe src="http://www.thisoldhouse.com/toh/video/0,,20464645,00.html"></iframe>	
+	</div>
+
+	<div id="column1">
+		<iframe src="https://www.osbornewood.com/table_base_kits.aspx"></iframe>
 	</div>
 
 <script>
