--- a/index.html
+++ b/index.html
@@ -1,29 +1,47 @@
 <!doctype html>
 <html>
-<head>
-	<title>Nutczar</title>
-	<meta name="description" content="Nutczar is the czar of the nuts." />
-	<link rel="stylesheet" href="/css/styles.css" />
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lobster|Sigmar+One|Monofett' rel='stylesheet' type='text/css'>
+	<head>
+		<title>Nutczar</title>
+		<meta name="description" content="Nutczar is the czar of the nuts." />
+		<link rel="stylesheet" href="/css/styles.css" />
+		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lobster|Sigmar+One|Monofett' rel='stylesheet' type='text/css'>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script>
+		$(document).ready(function(){
+    		$("button").click(function(){
+        		$("#div1").fadeToggle(1000);
+        		$("#div2").fadeToggle(2000);
+        		$("#div3").fadeToggle(3000);
+        		$("#div4").fadeToggle(4000);
+    });
+});
+</script>
 </head>
 
-<body>
-	<div>
-		<h1>Nutczar is coming.</h1>
+	<body>
 
-		<p>Hold tight.</p>
+		<h1>You should...</h1>
 
-	</div>
+		<div>
+    		<button><img src="/i/clickaroo.png"></button>
+    	</div>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		<div id="div1">
+			<img src="/i/stash1.jpg"/>
+		</div>
 
-  ga('create', 'UA-61033510-1', 'auto');
-  ga('send', 'pageview');
+		<div id="div2">
+			<img src="/i/stash2.jpg"/>	
+		</div>
 
-</script>
-</body>
+		<div id="div3">
+			<img src="/i/eye1.jpg">
+		</div>
+
+		<div id="div4">
+			<img src="/i/eye2.jpg">
+		</div>
+
+	</body>
+
 </html>
