--- a/index.html
+++ b/index.html
@@ -6,24 +6,37 @@
 		<link rel="stylesheet" href="/css/styles.css" />
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lobster|Sigmar+One|Monofett' rel='stylesheet' type='text/css'>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-61033510-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 	<script>
 		$(document).ready(function(){
-    		$("button").click(function(){
+    		$("#button").click(function(){
         		$("#div1").fadeToggle(1000);
         		$("#div2").fadeToggle(2000);
         		$("#div3").fadeToggle(3000);
         		$("#div4").fadeToggle(4000);
-    });
-});
-</script>
+   			 });
+		});
+	</script>
 </head>
 
 	<body>
 
 		<h1>You should...</h1>
 
-		<div>
-    		<button><img src="/i/clickaroo.png"></button>
+		<div id="button">
+    		<a id="clickaroo" href="#" onClick="_gaq.push(['_trackEvent', 'Images', 'Show-hide', 'Italy closeups']);" title="clickaroo"><span>Clickaroo</span></a>
     	</div>
 
 		<div id="div1">
@@ -42,6 +55,6 @@
 			<img src="/i/eye2.jpg">
 		</div>
 
+		<div id="container">
 	</body>
-
 </html>
