Update with image

--- a/index.html
+++ b/index.html
@@ -2,59 +2,28 @@
 <html>
 	<head>
 		<title>Nutczar</title>
-		<meta name="description" content="Nutczar is the czar of the nuts." />
+		<meta name="description" content="Nutczar. Who is he?" />
 		<link rel="stylesheet" href="/css/styles.css" />
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lobster|Sigmar+One|Monofett' rel='stylesheet' type='text/css'>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script type="text/javascript">
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+			<script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-61033510-1']);
-  _gaq.push(['_trackPageview']);
+  				var _gaq = _gaq || [];
+  				_gaq.push(['_setAccount', 'UA-61033510-1']);
+ 				_gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+ 				(function() {
+   				 var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+   				 ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+   				 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+ 						 })();
 
-</script>
-	<script>
-		$(document).ready(function(){
-    		$("#button").click(function(){
-        		$("#div1").fadeToggle(1000);
-        		$("#div2").fadeToggle(2000);
-        		$("#div3").fadeToggle(3000);
-        		$("#div4").fadeToggle(4000);
-   			 });
-		});
-	</script>
-</head>
+			</script>
+
+	</head>
 
 	<body>
-
-		<h1>You should...</h1>
-
-		<div id="button">
-    		<a id="clickaroo" href="#" onClick="_gaq.push(['_trackEvent', 'Images', 'Show-hide', 'Italy closeups']);" title="clickaroo"><span>Clickaroo</span></a>
-    	</div>
-
-		<div id="div1">
-			<img src="/i/stash1.jpg"/>
-		</div>
-
-		<div id="div2">
-			<img src="/i/stash2.jpg"/>	
-		</div>
-
-		<div id="div3">
-			<img src="/i/eye1.jpg">
-		</div>
-
-		<div id="div4">
-			<img src="/i/eye2.jpg">
-		</div>
-
-		<div id="container">
+		<div>
+			<img src='/i/window.jpg'/ height='800px'>
 	</body>
 </html>
